--- a/app/src/main/res/layout/fragment_nav_setting.xml
+++ b/app/src/main/res/layout/fragment_nav_setting.xml
@@ -176,6 +176,7 @@
             android:text="@string/tv_app_title"
             android:textColor="@color/TextBlack"
             android:textSize="14sp"
+            android:onClick="@{NavSettingFrag::onThustopClick}"
             app:layout_constraintStart_toStartOf="@id/tv_push_alarm"
             app:layout_constraintTop_toBottomOf="@id/tv_version_info"/>
 
