--- a/app/src/main/res/layout/dialog_date_picker.xml
+++ b/app/src/main/res/layout/dialog_date_picker.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,17 +13,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <CalendarView
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_year_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="20dp"
+            android:text="2021년 1월"
+            android:textSize="14sp"
+            android:textColor="@color/TextBlack"
+            app:notoTextStyle="medium"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/date_picker"/>
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/date_picker"
-            android:layout_width="300dp"
-            android:layout_height="310dp"
+            android:layout_width="316dp"
+            android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:datePickerMode="spinner"
-            android:spinnersShown="false"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@id/tv_cancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/tv_year_month"
+            tools:listitem="@layout/item_calendar"/>
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_cancel"
