--- a/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
@@ -213,6 +213,7 @@
                 android:text="티켓 포인트로 전환"
                 android:textColor="@color/TextBlack"
                 android:textSize="14sp"
+                android:onClick="@{NavPersonalHistoryTicketFrag::onTicketPointClick}"
                 app:layout_constraintBottom_toTopOf="@id/stroke_convert_point"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
