--- a/app/src/main/res/layout/fragment_nav_personal_history_history.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_history.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
