--- a/app/src/main/res/layout/fragment_nav_personal_history.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:elevation="11dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="?attr/actionBarSize" />
+            app:layout_constraintGuide_begin="@dimen/toolbar_height" />
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_title"
