--- a/app/src/main/res/layout/fragment_free_ticket_route_selection.xml
+++ b/app/src/main/res/layout/fragment_free_ticket_route_selection.xml
@@ -2,6 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="FreeTicketRouteSelectionFrag"
+            type="com.thustop_00.FreeTicketRouteSelectionFragment" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@color/White"
@@ -15,35 +20,9 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="@dimen/toolbar_height" />
 
-        <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_fft_selected_region"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="13dp"
-            android:background="@drawable/bg_outline_gray_fa_ee"
-            android:paddingStart="40dp"
-            android:paddingTop="9dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="9dp"
-            android:text="@string/tvSelLocal"
-            android:textColor="@color/TextGray"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline9" />
 
-        <ImageView
-            android:id="@+id/iv_fft_down_arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="9dp"
-            android:elevation="11dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_fft_selected_region"
-            app:layout_constraintStart_toStartOf="@+id/tv_fft_selected_region"
-            app:layout_constraintTop_toTopOf="@+id/tv_fft_selected_region"
-            app:srcCompat="@drawable/icon_down" />
+
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_free_ticket_routes"
@@ -116,6 +95,117 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/bt_fft_empty"
                 app:layout_constraintVertical_bias="0.4" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/v_fft_pause"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#65000000"
+            android:clickable="true"
+            android:focusable="auto"
+            android:visibility="gone"
+            android:onClick="@{FreeTicketRouteSelectionFrag::onSelLocalClick}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_fft_selected_region"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="13dp"
+            android:background="@drawable/bg_outline_gray_fa_ee"
+            android:paddingStart="40dp"
+            android:paddingTop="9dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="9dp"
+            android:text="@string/tvSelLocal"
+            android:textColor="@color/TextGray"
+            android:textSize="13sp"
+            android:onClick="@{FreeTicketRouteSelectionFrag::onSelLocalClick}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline9" />
+
+        <ImageView
+            android:id="@+id/iv_fft_down_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="9dp"
+            android:elevation="11dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_fft_selected_region"
+            app:layout_constraintStart_toStartOf="@+id/tv_fft_selected_region"
+            app:layout_constraintTop_toTopOf="@+id/tv_fft_selected_region"
+            app:srcCompat="@drawable/icon_down" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_fft_local"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_outline_gray_fa_ee"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/tv_fft_selected_region"
+            app:layout_constraintStart_toStartOf="@id/tv_fft_selected_region"
+            app:layout_constraintTop_toBottomOf="@id/tv_fft_selected_region">
+
+            <GridView
+                android:id="@+id/gv_fft_local"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginVertical="23dp"
+                android:layout_marginHorizontal="10dp"
+                android:gravity="center"
+                android:numColumns="3"
+                android:verticalSpacing="23dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_fft_local1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:bufferType="spannable"
+                android:text="@string/tv_local1"
+                android:textColor="@color/TextBlack"
+                app:notoTextStyle="bold"
+                android:textSize="13sp"
+                app:layout_constraintEnd_toEndOf="@id/cl_fft_local"
+                app:layout_constraintStart_toStartOf="@id/cl_fft_local"
+                app:layout_constraintTop_toBottomOf="@id/gv_fft_local" />
+
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_fft_local2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="@string/tv_local2"
+                android:textSize="9sp"
+                android:letterSpacing="-0.07"
+                app:layout_constraintBottom_toTopOf="@id/tv_fft_request"
+                app:layout_constraintEnd_toEndOf="@id/cl_fft_local"
+                app:layout_constraintStart_toStartOf="@id/cl_fft_local"
+                app:layout_constraintTop_toBottomOf="@id/tv_fft_local1" />
+
+            <com.thustop_00.widgets.NotoTextView
+                android:id="@+id/tv_fft_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="19dp"
+                android:layout_marginBottom="18dp"
+                android:padding="10dp"
+                android:text="@string/tv_request"
+                android:textColor="@color/Primary"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@id/cl_fft_local"
+                app:layout_constraintEnd_toEndOf="@id/cl_fft_local"
+                app:layout_constraintStart_toStartOf="@id/cl_fft_local"
+                app:layout_constraintTop_toBottomOf="@id/tv_fft_local2" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
