--- a/app/src/main/res/drawable-hdpi/bg_outline_gray_fa.xml
+++ b/app/src/main/res/drawable-hdpi/bg_outline_gray_fa.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="#fafafa" />
     <corners android:radius="12dp"/>
-    <stroke android:width="1dp" android:color="#eef0f1" />
+    <stroke android:width="1dp" android:color="@color/ContainerStroke" />
 </shape>
