--- a/app/src/main/res/drawable/bg_outline6.xml
+++ b/app/src/main/res/drawable/bg_outline6.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/White" />
-    <corners android:radius="20dp"/>
-    <stroke android:width="1dp" android:color="@color/AchF5"/>
+    <corners android:radius="6dp"/>
+    <stroke android:width="1dp" android:color="@color/ContainerStroke"/>
 </shape>
