--- a/app/src/main/res/layout/fragment_unsubscribe.xml
+++ b/app/src/main/res/layout/fragment_unsubscribe.xml
@@ -1,5 +1,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
@@ -18,9 +19,13 @@
             android:layout_height="151dp"
             android:layout_marginTop="55dp"
             android:src="@drawable/ic_bus_bye"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_unsubs_1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guideline1"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            app:layout_constraintVertical_bias="0.120000005"
+            app:layout_constraintVertical_chainStyle="packed" />
+
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_unsubs_1"
             android:layout_width="wrap_content"
@@ -31,6 +36,7 @@
             android:textSize="16sp"
             app:notoTextStyle="medium"
             app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@id/tv_unsubs_2"
             app:layout_constraintStart_toStartOf="@id/iv_unsubscribe"
             app:layout_constraintEnd_toEndOf="@id/iv_unsubscribe"
             app:layout_constraintTop_toBottomOf="@id/iv_unsubscribe"/>
@@ -45,7 +51,8 @@
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintStart_toStartOf="@id/iv_unsubscribe"
             app:layout_constraintEnd_toEndOf="@id/iv_unsubscribe"
-            app:layout_constraintTop_toBottomOf="@id/tv_unsubs_1"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_unsubs_1"
+            app:layout_constraintBottom_toTopOf="@id/tv_unsubs_notice_title"/>
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_unsubs_notice_title"
