--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -5,6 +5,7 @@
             <enum name = "regular" value = "1"/>
             <enum name = "medium" value = "2"/>
             <enum name = "bold" value = "3"/>
+            <enum name = "light" value = "4"/>
         </attr>
     </declare-styleable>
 
